clusters/pi-k3s/kiwix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix
  namespace: kiwix
spec:
  selector:
    app: kiwix
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
